--- a/.gitignore
+++ b/.gitignore
@@ -20,17 +20,14 @@
 *.data
 *.json
 *.cfg
-!setup.cfg
+*.lprof
+*.out
 !cfg/yolov3*.cfg
 
 storage.googleapis.com
 runs/*
 data/*
-data/images/*
-!data/*.yaml
-!data/hyps
-!data/scripts
-!data/images
+!data/hyps/*
 !data/images/zidane.jpg
 !data/images/bus.jpg
 !data/*.sh
@@ -52,14 +49,12 @@ VOC/
 *.pt
 *.pb
 *.onnx
-*.engine
 *.mlmodel
 *.torchscript
 *.tflite
 *.h5
 *_saved_model/
 *_web_model/
-*_openvino_model/
 darknet53.conv.74
 yolov3-tiny.conv.15
 
